<resources>
    <string name="app_name">Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="button_point" translatable="false">.</string>
    <string name="button_0" translatable="false">0</string>
    <string name="button_equal" translatable="false">=</string>
    <string name="button_3" translatable="false">3</string>
    <string name="button_2" translatable="false">2</string>
    <string name="button_1" translatable="false">1</string>
    <string name="button_add" translatable="false">+</string>
    <string name="button_6" translatable="false">6</string>
    <string name="button_4" translatable="false">4</string>
    <string name="button_9" translatable="false">9</string>
    <string name="button_8" translatable="false">8</string>
    <string name="button_7" translatable="false">7</string>
    <string name="button_delete" translatable="false"><![CDATA[<-]]></string>
    <string name="button_multiple" translatable="false">&#215;</string>
    <string name="button_5" translatable="false">5</string>
    <string name="button_plus_minus" translatable="false">±</string>
    <string name="button_division" translatable="false">÷</string>
    <string name="button_subtract" translatable="false">—</string>
    <string name="textview_aboutapp">Calculator v1.0</string>
    <string name="textview_developer">Developer: Azarov Evgeniy</string>
    <string name="go_to_back">Go to back</string>
    <string name="settings_save">Save the value when you close</string>
    <string name="settings_advancedmode_title">Advenced mode</string>
    <string name="settings_theme">Theme</string>
    <string-array name="theme">
        <item>@string/settings_theme_light</item>
        <item>@string/settings_theme_dark</item>
    </string-array>
    <string name="settings_theme_light">Light</string>
    <string name="settings_theme_dark">Dark</string>
    <string name="settings_save_title">Saving data</string>
    <string name="settings_advancedmode">Enable advenced mode</string>
    <string name="settings_functionality">Functionality</string>
    <string name="settings_interface">Interface</string>
    <string name="theme_title">Theme</string>
</resources>
