<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_functionality">

        <SwitchPreference
            android:defaultValue="true"
            android:key="save_value"
            android:summary="@string/settings_save"
            android:title="@string/settings_save_title" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="advenced_mode"
            android:summary="@string/settings_advancedmode"
            android:title="@string/settings_advancedmode_title" />

    </PreferenceCategory>


    <PreferenceCategory android:title="@string/settings_interface">

        <ListPreference
            android:defaultValue="@string/settings_theme_light"
            android:entries="@array/theme"
            android:entryValues="@array/theme"
            android:key="theme_settings"
            android:title="@string/theme_title" />

    </PreferenceCategory>

</PreferenceScreen>