<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.evgeniy.calc.MainActivity">

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:columnCount="4"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <Button
            android:id="@+id/btnPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="start"
            android:layout_margin="2dp"
            android:layout_row="5"
            android:background="@drawable/circle_button"
            android:text="@string/button_point"
            android:textSize="28sp" />

        <Button
            android:id="@+id/btn0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="fill"
            android:layout_margin="2dp"
            android:layout_row="5"
            android:background="@drawable/circle_button"
            android:text="@string/button_0"
            android:textSize="28sp" />

        <Button
            android:id="@+id/btnEqual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_gravity="fill|end|start"
            android:layout_margin="2dp"
            android:layout_row="4"
            android:layout_rowSpan="2"
            android:background="@drawable/circle_button"
            android:text="@string/button_equal"
            android:textSize="28sp" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="start"
            android:layout_margin="2dp"
            android:layout_row="4"
            android:background="@drawable/circle_button"
            android:text="@string/button_3"
            android:textSize="28sp" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="start"
            android:layout_margin="2dp"
            android:layout_row="4"
            android:background="@drawable/circle_button"
            android:text="@string/button_2"
            android:textSize="28sp" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="start"
            android:layout_margin="2dp"
            android:layout_row="4"
            android:background="@drawable/circle_button"
            android:text="@string/button_1"
            android:textSize="28sp" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_gravity="start|end"
            android:layout_margin="2dp"
            android:layout_row="3"
            android:background="@drawable/circle_button"
            android:text="@string/button_add"
            android:textSize="28sp" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="start"
            android:layout_margin="2dp"
            android:layout_row="3"
            android:background="@drawable/circle_button"
            android:text="@string/button_6"
            android:textSize="28sp" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="start"
            android:layout_margin="2dp"
            android:layout_row="3"
            android:background="@drawable/circle_button"
            android:text="@string/button_4"
            android:textSize="28sp" />

        <Button
            android:id="@+id/btnSub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_gravity="end|start"
            android:layout_margin="2dp"
            android:layout_row="2"
            android:background="@drawable/circle_button"
            android:text="@string/button_subtract"
            android:textSize="28sp" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="start"
            android:layout_margin="2dp"
            android:layout_row="2"
            android:background="@drawable/circle_button"
            android:text="@string/button_9"
            android:textSize="28sp" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="start"
            android:layout_margin="2dp"
            android:layout_row="2"
            android:background="@drawable/circle_button"
            android:text="@string/button_8"
            android:textSize="28sp" />

        <Button
            android:id="@+id/btn7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="start"
            android:layout_margin="2dp"
            android:layout_row="2"
            android:background="@drawable/circle_button"
            android:text="@string/button_7"
            android:textSize="28sp" />

        <Button
            android:id="@+id/btnDel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_gravity="top|start|end"
            android:layout_margin="2dp"
            android:layout_row="1"
            android:background="@drawable/circle_button"
            android:text="@string/button_delete"
            android:textSize="28sp" />

        <Button
            android:id="@+id/btnDiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="start|top"
            android:layout_margin="2dp"
            android:layout_row="1"
            android:background="@drawable/circle_button"
            android:text="@string/button_division"
            android:textSize="28sp" />

        <Button
            android:id="@+id/btnMul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="start|top"
            android:layout_margin="2dp"
            android:layout_row="1"
            android:background="@drawable/circle_button"
            android:text="@string/button_multiple"
            android:textSize="28sp" />

        <Button
            android:id="@+id/btnPlusMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="start|top"
            android:layout_margin="2dp"
            android:layout_row="1"
            android:background="@drawable/circle_button"
            android:text="@string/button_plus_minus"
            android:textSize="28sp" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="start"
            android:layout_margin="2dp"
            android:layout_row="3"
            android:background="@drawable/circle_button"
            android:text="@string/button_5"
            android:textSize="28sp" />

        <EditText
            android:id="@+id/etNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="4"
            android:layout_gravity="start|top|end"
            android:layout_row="0"
            android:clickable="false"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:gravity="end|center_vertical"
            android:inputType="numberDecimal"
            android:textSize="28sp" />

    </GridLayout>

</RelativeLayout>
